<resources>
    <string name="app_name">WeShare</string>
    <string name="title_activity_add_request">Add Requests</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_deep_link">DeepLinkActivity</string>
    <string name="title_activity_api">ApiActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Lecturer">Lecturer</string>
    <string name="Teacher">Teacher</string>
    <string name="Kindergarden_Teacher">Kindergarden Teacher</string>
    <string name="Assistant">Assistant</string>
    <string name="category_lable">Category:</string>
    <string name="btnSendText">Send</string>
    <string name="add_your_comment">Add your comment:</string>
    <string name="btn_offer_yourself">offer yourself</string>
    <string name="btn_delete_request">Delete Want Ad</string>
    <string name="btn_delete_offer">Delete offer</string>
    <string name="your_offer_lable">your offer:</string>
    <string name="btn_update_offer">Update offer</string>
    <string name="offer_added_successfuly">offer added successfuly!</string>
    <string name="offer_updated_successfuly">offer updated successfuly!</string>
    <string name="request_deleted_successfuly">Want Ad deleted successfuly!</string>
    <string-array
        name="JobsArray">
        <item>@string/Lecturer</item>
        <item>@string/Teacher</item>
        <item>@string/Kindergarden_Teacher</item>
        <item>@string/Assistant</item>
    </string-array>
    <item type="id" name="request" />
    <item type="id" name="position" />
    <item type="id" name="lat_long" />
    <item type="id" name="location_name" />
    <string name="title_activity_all_requests">Want Ads</string>
    <string name="title_activity_user_requests">My Want Ads</string>
    <string name="title_activity_offers">My offers</string>
    <string name="share">Share</string>
    <string name="Send">Send</string>
    <string name="offers">Offers:</string>
    <string name="offering_name">Offering Name:</string>
    <string name="email">E-mail:</string>
    <string name="google_place_api">AIzaSyAMpmONRQheLnxSKyCFRX-rHRltEMjAN9M</string>
    <string name="Send_mail_using">Send mail using...</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="address">Address...</string>
    <string name="pickplace">Pick Place</string>
    <string name="start_date_picker">Start Date</string>
    <string name="end_date_picker">End Date</string>
    <string name="finish">Finish</string>
    <string name="add_title">Add Title</string>
    <string name="add_details">Add Details</string>
    <string name="newest_first">Newest First</string>
    <string name="closest_first">Closest First</string>
    <string name="retrieve_data">Retrieve data...</string>
</resources>
