<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="5dp"
    card_view:cardElevation="5dp">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent" android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/fixed_area">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/job_title"
                android:paddingLeft="4dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="Hello World"
                android:layout_toLeftOf="@+id/arrow"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:id="@+id/job_summary"
                android:padding="4dp"
                android:layout_below="@+id/job_title"
                android:text="It's a beutyfull Day..."
                android:ellipsize="end"
                android:maxLines="1"
                android:lines="1"
                android:layout_toLeftOf="@+id/arrow"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/arrow_right"
                android:id="@+id/arrow"
                android:layout_alignParentRight="true"
                android:foregroundGravity="center"
                android:layout_centerVertical="true"
                android:padding="8dp"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_below="@+id/fixed_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/flexible_area"
            android:visibility="visible"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/full_job_summary"
                android:padding="4dp"
                android:textSize="20sp"
                android:text="A preschool teacher is a type of early childhood educator who instructs children from 2 to age 4 , which stands as the youngest stretch of early childhood education. Early Childhood Education teachers need to span the continuum of children from birth to age 8."/>
            <LinearLayout
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/category_lable"
                    android:id="@+id/categor_lable" />
                <TextView
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Category"
                    android:id="@+id/category"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_offer_lable"/>

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/offer_comment"
                    android:text="Full offer comment"/>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="3dp">

                <LinearLayout
                    android:gravity="center"
                    android:id="@+id/btn_delete_offer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_default"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:onClick="DeleteOffer">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/delete" />

                    <TextView
                        android:paddingRight="3dp"
                        android:paddingLeft="5dp"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/btn_delete_offer" />
                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:id="@+id/btn_update_offer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/btn_default"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:onClick="UpdateOffer">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/update" />

                    <TextView
                        android:paddingRight="5dp"
                        android:paddingLeft="5dp"
                        android:textSize="15sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/btn_update_offer" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>